[package]
name = "respirator"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Paweł Kobojek <pawelkobojek@narf.ai>"]

homepage = "https://github.com/pawelkobojek/respirator"
documentation = "https://docs.rs/respirator"
repository = "https://github.com/pawelkobojek/respirator"
readme = "README.md"
description = """
RESP (Redis Serialization Protocol) parser.
"""
keywords = ["resp", "redis", "parser", "parsing"]
categories = ["parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
